@@ -3,7 +3,10 @@ WRAP_CLASS("itk::MorphologicalWatershedImageFilter")
   WRAP_IMAGE_FILTER_USIGN_INT(2)
   WRAP_IMAGE_FILTER_SIGN_INT(2)
   WRAP_IMAGE_FILTER_REAL(2)
-  
+  IF(NOT WRAP_unsigned_long)
+    WRAP_IMAGE_FILTER("UL" 2)
+  ENDIF(NOT WRAP_unsigned_long)
+
   BEGIN_MANAGED_PROPERTY("FullyConnected" GETSET)
     SET(MANAGED_PROPERTY_SUMMARY   "Get/set the neighbourhood connectivity for the algorithm. For example: with 2D images, FullyConnected=True means 8-neighbourhood connectivity and FullyConnected=False means 4-neighbourhood connectivity.")
     SET(MANAGED_PROPERTY_TYPE      "bool")
